--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quote Generator App</title>
+    <script src="./app.js" defer></script>
 </head>
 <body>
     <h1>Quote Generator App</h1>
+    <button>Generate a quote</button>
 </body>
 </html>
