Add ID to quote generation button and display area for fetched quote

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Quote Generator App</h1>
-    <button>Generate a quote</button>
+    <button id="generate-quote-btn">Generate a quote</button>
+    <p id="quote"></p>
 </body>
 </html>
