--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     <h1>Quote Generator App</h1>
+    <form action="">
+        <label for="quote-input">Enter quote: </label>
+        <textarea name="quote-input" id="quote-input" cols="24" rows="4"></textarea><br><br>
+        <label for="author-input">Enter author: </label>
+        <input type="text" id="author-input" name="author-input"><br><br><br>
+    </form>
     <button id="generate-quote-btn">Generate a quote</button>
     <p id="quote"></p>
 </body>
