Add button to submit quotes in index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,8 @@
         <label for="quote-input">Enter quote: </label>
         <textarea name="quote-input" id="quote-input" cols="24" rows="4"></textarea><br><br>
         <label for="author-input">Enter author: </label>
-        <input type="text" id="author-input" name="author-input"><br><br><br>
+        <input type="text" id="author-input" name="author-input"><br><br>
+        <button id="add-quote">Add quote</button><br><br>
     </form>
     <button id="generate-quote-btn">Generate a quote</button>
     <p id="quote"></p>
