Update index.html to change input field names and IDs for quote and author, and modify displayed quote paragraph

--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -10,12 +10,12 @@
     <h1>Quote Generator App</h1>
     <form action="">
         <label for="quote-input">Enter quote: </label>
-        <textarea name="quote-input" id="quote-input" cols="24" rows="4"></textarea><br><br>
-        <label for="author-input">Enter author: </label>
-        <input type="text" id="author-input" name="author-input"><br><br>
+        <textarea name="quote" id="quote" cols="24" rows="4"></textarea><br><br>
+        <label for="author">Enter author: </label>
+        <input type="text" id="author" name="author"><br><br>
         <button id="add-quote">Add quote</button><br><br>
     </form>
     <button id="generate-quote-btn">Generate a quote</button>
-    <p id="quote"></p>
+    <p id="displayed-quote"></p>
 </body>
 </html>
