--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quote Generator App</title>
-    <script src="./app.js" defer></script>
+    <script type="module" src="./app.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
     <h1>Quote Generator App</h1>
