Add error message placeholder in index.html for quote submission feedback

--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -16,6 +16,7 @@
         <input type="text" id="author" name="author"><br><br>
         <button id="add-quote">Add quote</button><br><br>
     </form>
+    <p id="errMsg"></p>
     <button id="generate-quote-btn">Generate a quote</button>
     <p id="displayed-quote"></p>
 </body>
