Add container for displayed quote and improve CSS for better text handling

--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -23,6 +23,8 @@
     </form>
     <p id="errMsg"></p>
     <button id="generate-quote-btn">Generate a quote</button>
-    <p id="displayed-quote"></p>
+    <div class="displayed-quote-container">
+        <p id="displayed-quote"></p>
+    </div>
 </body>
 </html>
